# CS344_course_lab

./: README.md
Problem Set 1/: CMakeCache.txt  CMakeLists.txt  HW1  Makefile  cmake_install.cmake  main.cpp  student_func.cu
Problem Set 2/: HW2  Makefile  main.cpp  student_func.cu
Problem Set 3/: HW3  HW3.cu  Makefile  main.cpp  student_func.cu
Problem Set 4/: HW4  HW4.cu  Makefile  main.cpp  student_func.cu
Problem Set 5/: HW5  Makefile  main.cu  student.cu
Problem Set 6/: HW6  Makefile  reference_calc.cpp  student_func.cu
